# stable-structures

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Contributing.md  LICENSE  README.md  RELEASE_GUIDE.md  SECURITY.md  bench.yml  canbench_results.csv  canbench_results.yml  debug_bucket_test.rs  index.html  output.txt  parse_benchmarks.py  print.html  rust-toolchain.toml  schema-upgrades.html  searchindex.js  toc.html  toc.js
.claude/: CLAUDE.md  settings.local.json
.github/: CODEOWNERS
.github/workflows/: CODEOWNERS  benchmark_ci.sh  canbench-post-comment.yml  canbench_ci_download_artifacts.sh  canbench_ci_run_benchmark.sh  ci-notify-slack.yml  ci.yml  conventional-commits.yml  pages.yml  pr-comment.yml  publish.yml
benches/: benches.rs  btreemap_insert.rs  run-benchmark.sh
benchmark-canisters/: Cargo.toml  build.sh  dfx.json
benchmark-canisters/src/: btreemap.rs  main.rs  memory_manager.rs  vec.rs
benchmarks/: Cargo.toml  benchmark.rs  benchmark_ci.sh  build.sh  dfx.json  results.yml  run-benchmark.sh  run.sh
benchmarks/btreemap/: canbench.yml  canbench_results.csv  canbench_results.yml  log.txt
benchmarks/btreemap/src/: main.rs
benchmarks/btreeset/: canbench.yml  canbench_results.csv  canbench_results.yml  log.txt
benchmarks/btreeset/src/: main.rs
benchmarks/compare/: canbench.yml  canbench_results.csv  canbench_results.yml  log.txt
benchmarks/compare/src/: main.rs
benchmarks/io_chunks/: canbench.yml  canbench_results.yml
benchmarks/io_chunks/src/: main.rs
benchmarks/memory_manager/: canbench.yml  canbench_results.csv  canbench_results.yml  log.txt
benchmarks/memory_manager/src/: main.rs
benchmarks/nns/: canbench.yml  canbench_results.yml
benchmarks/nns/src/: main.rs  nns_vote_cascading.rs
benchmarks/nns/src/nns_vote_cascading/: benches.rs  tests.rs
benchmarks/results/: 2025-06-06-btreemap.txt  2025-06-06-compare.txt  2025-06-06-memory_manager.txt
benchmarks/scripts/: parse_benchmarks.py
benchmarks/src/: btreemap.rs  btreeset.rs  common.rs  lib.rs  main.rs  memory_manager.rs  random.rs  vec.rs
benchmarks/vec/: canbench.yml  canbench_results.csv  canbench_results.yml  log.txt
benchmarks/vec/src/: main.rs
canbench-bin/: Cargo.toml
canbench-bin/src/: lib.rs  main.rs
canbench-rs/: Cargo.toml
canbench-rs-macros/: Cargo.toml
canbench-rs-macros/src/: lib.rs
canbench-rs/src/: lib.rs
concepts/: concepts.html  memory-manager.html  memory-trait.html
demo/: .gitignore  Cargo.toml  dfx.json  rust-toolchain.toml
demo/src/: build.sh  demo.did  main.rs
docs/: .gitignore  book.toml
docs/src/: SUMMARY.md  concepts.md  design-principles.md  memory-manager.md  schema-upgrades.md
docs/src/concepts/: concepts.md  memory-manager.md  memory-trait.md
docs/src/introduction/: available-data-structures.md  deep-dive.md  introduction.md
dumps/: btreemap_v1_packed_headers.dump
examples/: .gitignore  Cargo.toml  README.md  dfx.json  test.sh
examples/src/assets_example/: Cargo.toml  candid.did
examples/src/assets_example/src/: lib.rs
examples/src/basic_example/: Cargo.toml  candid.did
examples/src/basic_example/src/: lib.rs
examples/src/custom_types_example/: Cargo.toml  candid.did
examples/src/custom_types_example/src/: lib.rs
examples/src/quick_start/: Cargo.toml  README.md  candid.did
examples/src/quick_start/src/: lib.rs  memory.rs
examples/src/task_timer/: Cargo.toml  candid.did
examples/src/task_timer/src/: lib.rs
examples/src/vecs_and_strings/: Cargo.toml
examples/src/vecs_and_strings/src/: lib.rs
fuzz/: Cargo.toml  rust-toolchain.toml
fuzz/fuzz_targets/: data.rs  stable_btreemap_multiple_ops_persistent.rs  stable_minheap_multiple_ops_persistent.rs  tlsf_allocator.rs
html/: 404.html
html/introduction/: design-principles.html
introduction/: available-data-structures.html  introduction.html
profiler/: Cargo.toml
profiler/src/: benchmark.rs  bin.rs  lib.rs
proptest-regressions/btreemap/: proptests.txt
proptest-regressions/btreemap/node/: tests.txt
proptest-regressions/storable/: tests.txt
proptest-regressions/tlsf/: tests.txt
proptest-regressions/writer/: tests.txt
scripts/: ci_download_canbench_artifacts.sh  ci_run_benchmark.sh
src/: allocator.rs  base_vec.rs  binary_heap.rs  btree.rs  btreemap.rs  btreeset.rs  cell.rs  certification.rs  certified_seq.rs  data_size.rs  debug.rs  file_mem.rs  hashmap.rs  ic0_api.rs  ic0_memory.rs  lib.rs  log.rs  log_tests.rs  mem_size.rs  memory_manager.rs  memory_stats.rs  memory_usage.rs  min_heap.rs  reader.rs  storable.rs  tests.rs  tlsf.rs  types.rs  vec.rs  vec_mem.rs  writer.rs
src/api_conformance/: btreemap.rs  btreeset.rs  min_heap.rs  mod.rs  vec.rs
src/btree/: allocator.rs  node.rs
src/btreemap/: allocator.rs  base.rs  bounded_btreemap.rs  cache.rs  entry.rs  iter.rs  key_address_cache.rs  memory_manager_v1_packed_headers.dump  mod.rs  node.rs  node_cache.rs  proptests.rs  tests.rs  unbounded_btreemap.rs
src/btreemap/bounded_btreemap/: proptests.rs
src/btreemap/node/: io.rs  reader.rs  tests.rs  v1.rs  v2.rs
src/btreeset/: proptests.rs
src/cell/: tests.rs
src/certified_seq/: tests.rs  tree_tests.rs
src/log/: tests.rs
src/memory_manager/: bucket_release_btreemap_tests.rs  bucket_release_core_tests.rs  bucket_release_tests.rs  bucket_release_vec_tests.rs  header.rs  memory_reclaim_btreemap_tests.rs  memory_reclaim_core_tests.rs  memory_reclaim_vec_tests.rs  sizes.rs  stability_read.golden  stability_write.golden
src/min_heap/: tests.rs
src/reader/: tests.rs
src/storable/: tests.rs  tuples.rs
src/tlsf/: block.rs  free_lists.rs  tests.rs  verification.rs
src/vec/: tests.rs
src/writer/: tests.rs
tests/: api_confomrance.rs  api_conformance.rs
tmp/: output.txt  output_0-2.txt  output_0.txt  output_1.txt  parse_benchmarks.py  v1.csv  v2.csv
