[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-stable-structures = { path = "../", features = ["profiler"] }
maplit = "1.0.2"
profiler = { path = "../profiler" }
serde = "1.0"
tiny-rng = "0.2.0"
