[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canbench-rs.workspace = true
candid.workspace = true
ic-cdk-macros.workspace = true
ic-cdk.workspace = true
ic-stable-structures = { path = "../", features = [] }
maplit.workspace = true
serde.workspace = true
tiny-rng.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "btreemap"
path = "btreemap/src/main.rs"

[[bin]]
name = "btreeset"
path = "btreeset/src/main.rs"

[[bin]]
name = "io_chunks"
path = "io_chunks/src/main.rs"

[[bin]]
name = "memory_manager"
path = "memory_manager/src/main.rs"

[[bin]]
name = "nns"
path = "nns/src/main.rs"

[[bin]]
name = "vec"
path = "vec/src/main.rs"
