[package]
name = "canbench-bin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "canbench"
path = "src/main.rs"

[dependencies]
candid.workspace = true
clap = { version = "4.0.11", features = ["derive"] }
colored = "2.0.4"
flate2 = "1.0.28"
hex = "0.4.3"
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = "1.0"
serde_yaml = "0.9"
sha256 = "1.5.0"
tempfile = "3.3.0"
wasmparser = "0.119.0"
