[package]
name = "canbench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "canbench"
path = "src/lib.rs"

[dependencies]
candid.workspace = true
ic-cdk.workspace= true
maplit = "1.0.2"
serde = "1.0"
