[workspace]
members = [
    "src/assets_example",
    "src/basic_example",
    "src/vecs_and_strings",
    "src/custom_types_example",
    "src/quick_start",
    "src/task_timer",
]

[workspace.dependencies]
candid = "0.9.11"
ic-cdk = "0.10.1"
ic-cdk-macros = "0.7.1"
serde = "1.0.132"
num_enum = "0.7.3"
