[workspace]
members = [
    "src/assets_example",
    "src/basic_example",
    "src/vecs_and_strings",
    "src/custom_types_example",
    "src/quick_start",
    "src/task_timer",
]

[workspace.dependencies]
candid = "0.10.14"
ciborium = "0.2.1"
ic-cdk = "0.12.1"
ic-cdk-macros = "0.8.4"
ic0 = "0.18"
serde = "1.0.132"
