[package]
name = "ic-stable-structures-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = {version = "1.3.0", features = ["derive"]}
serde = {version = "1.0", features = ["derive"]}
serde_bytes = "0.11"
serde_cbor = "0.11.2"
tempfile = "3.3.0"

[dependencies.ic-stable-structures]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "stable_btreemap_multiple_ops_persistent"
path = "fuzz_targets/stable_btreemap_multiple_ops_persistent.rs"
test = false
doc = false
bench = false

[[bin]]
name = "stable_minheap_multiple_ops_persistent"
path = "fuzz_targets/stable_minheap_multiple_ops_persistent.rs"
test = false
doc = false
bench = false
