[package]
name = "ic-stable-structures-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { workspace = true, features = ["derive"] }
libfuzzer-sys.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_bytes.workspace = true
serde_cbor.workspace = true
tempfile.workspace = true

[dependencies.ic-stable-structures]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "stable_btreemap_multiple_ops_persistent"
path = "fuzz_targets/stable_btreemap_multiple_ops_persistent.rs"
test = false
doc = false
bench = false

[[bin]]
name = "stable_minheap_multiple_ops_persistent"
path = "fuzz_targets/stable_minheap_multiple_ops_persistent.rs"
test = false
doc = false
bench = false
