[package]
name = "profiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "profiler"
path = "src/lib.rs"

[[bin]]
name = "canbench"
path = "src/bin.rs"
required-features = ["bin"]

[dependencies]
candid.workspace = true
ic-cdk.workspace= true
maplit = "1.0.2"
serde = "1.0"

# Dependencies for the canbench binary.
clap = { version = "4.0.11", features = ["derive"], optional = true }
colored = { version = "2.0.4", optional = true }
flate2 = { version = "1.0.28", optional = true }
hex = { version = "0.4.3", optional = true }
reqwest = { version = "0.11.23", features = ["blocking"], optional = true }
serde_yaml = { version = "0.9", optional = true }
sha256 = { version = "1.5.0", optional = true }
tempfile = { version = "3.3.0", optional = true }
wasmparser = { version = "0.119.0", optional = true }

[features]
bin = [
  "clap",
  "colored",
  "flate2",
  "hex",
  "reqwest",
  "sha256",
  "serde_yaml",
  "tempfile",
  "wasmparser",
]
